Corrigindo Bugs da versao anterior

--- a/Pagina/login.html
+++ b/Pagina/login.html
@@ -3090,6 +3090,8 @@ a.eapps-instagram-feed-popup-item-text-author:hover {
 </li>
 <li id="menu-item-16649" class="nav-item menu-item menu-item-type-post_type menu-item-object-page "><a class="nav-link " href="https://imobiliaria.royalhomegroup.com.br/blog/">Blog</a> </li>
 <li id="menu-item-16944" class="nav-item menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-16941 current_page_item "><a class="nav-link " href="https://imobiliaria.royalhomegroup.com.br/contato/">Contato</a> </li>
+<li id="menu-item-16944" class="nav-item menu-item menu-item-type-post_type menu-item-object-page "><a class="nav-link " href="trabalhoConosco.html">Trabalhe Conosco</a> </li>
+<li id="menu-item-16944" class="nav-item menu-item menu-item-type-post_type menu-item-object-page "><a class="nav-link " href="login.html">Login Cliente</a> </li>
 </ul>	                    </nav><!-- main-nav -->
                     
                     <div class="login-register">
